results/old_runs/state_summary_31135.err
  File "/gpfs/home/amyli2/cse416/scripts/state_summary.py", line 1
    import warnings import geopandas as gpd import networkx as nx from gerrychain import Graph 
                    ^^^^^^
SyntaxError: invalid syntax
